# HandmadeHero

./: .gitignore  CMakeLists.txt  HandmadeHero.sublime-project  HandmadeHero.sublime-workspace
code/: build.sh  copyData.sh  makebundle.sh  osx_main.h  osx_main.mm
cpp/code/: handmade.cpp  handmade.h  handmade_entity.cpp  handmade_entity.h  handmade_intrinsics.h  handmade_math.h  handmade_platform.h  handmade_random.h  handmade_render_group.cpp  handmade_render_group.h  handmade_sim_region.cpp  handmade_sim_region.h  handmade_tile.cpp  handmade_tile.h  handmade_world.cpp  handmade_world.h  win32_handmade.cpp  win32_handmade.h
misc/: CMakeLists.txt  build.bat  build_casey.bat  compile_commands.bat  shell.bat
